adjust on minor layout issues

--- a/kanban.app/src/components/app/App.css
+++ b/kanban.app/src/components/app/App.css
@@ -4,5 +4,5 @@
 .main-app{
     background: #2b2929 !important;
     width: 100% !important;;
-    height: 100% !important;
+    min-height: 100% !important;
 }
