--- a/kanban.app/src/components/login/login.css
+++ b/kanban.app/src/components/login/login.css
@@ -10,7 +10,7 @@
 }
 
 .kanbanlogo{
-    margin-top: 10em!important;
+    margin-top: 6em!important;
     margin:1vw; 
     flex:1 1 auto;
 }
